# MolRGen

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  NOTICE.md  Readme.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: test_docker_image.yml  test_pip_installation.yml
Sections/Appendix/: Verifier.tex
api/toc/: index.html
data/: upload_data.ipynb
datasets/generation/: index.html
datasets/main/: index.html
datasets/prop_prediction/: index.html
datasets/retro_synthesis/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
mol_gen_docking/: score_completions.py  server.py  server_launcher.py  server_mcp.py
mol_gen_docking/dataset/: generate_prompts.ipynb
mol_gen_docking/evaluation/: diversity_aware_top_k.py  fingeprints_utils.py  sft_extraction.py
mol_gen_docking/reward/: __init__.py  molecular_verifier.py  molecular_verifier_pydantic_model.py
mol_gen_docking/server_utils/: server_app.py  server_setting.py  utils.py
mol_gen_docking/utils/: property_utils.py
molrgen/: score_completions.py  server.py  server_mcp.py
molrgen/data/: __init__.py  meeko_process.py  prompt_generator.py  pydantic_dataset.py
molrgen/dataset/: generate_prompts.ipynb
molrgen/evaluation/: diversity_aware_top_k.py  fingeprints_utils.py  sft_extraction.py  top_k.py
molrgen/reward/: __init__.py  molecular_verifier.py  molecular_verifier_pydantic_model.py
molrgen/server_utils/: buffer.py  server_app.py  server_setting.py  utils.py
notebooks/: analyze_reinvent_results.py  convert_batch_api.ipynb  create_sft_dataset.ipynb  query_ms_batch_api.ipynb  zinc_query_creation.ipynb
notebooks/data/: MOLGEN_data.ipynb  MOLPROP_data.ipynb  MOLREAC_clean_dataset.ipynb  MOLREAC_dataset.ipynb  anolg_test_constructions.ipynb
notebooks/metadata/: molgen.py
notebooks/others/: ether0.ipynb  spread_inference_gen.ipynb  training_curves.ipynb
notebooks/results/: DivTopK.py  MolGenOutput.ipynb  Polaris.ipynb  Synthesis.ipynb  comparison_to_rpo.ipynb  visualize_docking_results-Copy1.ipynb
notebooks/utils/: __init__.py  molgen_utils.py  molprop_utils.py  pandas_to_latex.py  parse_training_curves.py  utils.py
reward_server/Server_Asynchronous/: index.html
search/: search_index.json
slurm/: score_generations.sh
slurm/baselines/: run_server.sh
stylesheets/: extra.css
system_prompts/: vanilla.json  vanilla_boxed.json
test/: conftest.py  test_prompt_generator.py
(+183 files in other folders)
