[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mol_gen_docking"
version = "2025.8.4"
dependencies = [
    "torch>=2.6.0",
    "datasets",
    "ray>=2.54.0",
    "pydantic",
    "pydantic_settings",
    "selfies",
    "fastapi",
    "rdkit",
    "pytest",
    "hydra-core",
    "fuzzywuzzy",
    "evaluate",
    "gget",
    "yapf",
    "openpyxl",
    "pyscreener",
    "meeko==0.6.1",
    "scikit-learn==1.2.2",
    "ringtail",
    "prody",
    "biopython",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "pdb-tools",
    "jsonlines"
]

requires-python = ">=3.10"
description = ""


[project.optional-dependencies]
model = [
    "vllm==0.10.1.1",
    "pytdc==1.1.14",
    "transformers==4.57.3",
    "trl==0.24.0",
    "wandb",
    "peft==0.15.2",
    "flash_attn==2.8.0.post2"
]
main = [
    "pytdc==1.1.14"
]

[tool.mypy]
disable_error_code = ["type-arg"]
plugins = ["pydantic.mypy"]

[project.entry-points."vllm.general_plugins"]
register_dummy_model = "mol_gen_docking.models.vllm_model.register:register"

[tool.hatch.build.targets.wheel]
    packages = ["src/mol_gen_docking"]
