[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mol_gen_docking"
version = "2025.8.4"
dependencies = [
    "torch>=2.6.0",
    "datasets",
    "ray>=2.52.1",
    "pydantic",
    "pydantic_settings",
    "selfies",
    "fastapi",
    "rdkit",
    "pytest",
    "hydra-core",
    "fuzzywuzzy",
    "evaluate",
    "gget",
    "yapf",
    "openpyxl",
    "pyscreener",
    "meeko==0.6.1",
    "scikit-learn==1.2.2",
    "ringtail",
    "prody",
    "biopython",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "pdb-tools",
    "jsonlines"
]

requires-python = ">=3.10"
description = ""


[project.optional-dependencies]
model = [
    "vllm==0.10.1.1",
    "pytdc==1.1.14",
    "transformers==4.57.3",
    "trl==0.29.0",
    "wandb",
    "peft==0.15.2",
    "flash_attn==2.8.0.post2"
]
main = [
    "pytdc==1.1.14",
    "fastapi-mcp"
]

[tool.mypy]
disable_error_code = ["type-arg"]
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
    packages = ["mol_gen_docking"]
